Fix scroll jump to header

--- a/src/index.css
+++ b/src/index.css
@@ -172,7 +172,6 @@
   }
 
   html {
-    scroll-behavior: smooth;
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
     height: 100%;
